# hyprnote

./: Cargo.toml  package.json  pnpm-lock.yaml
apps/cli/: Cargo.toml  README.md
apps/cli/src/: error.rs  main.rs  theme.rs
apps/cli/src/agent/: backend.rs  mod.rs
apps/cli/src/commands/: mod.rs
apps/cli/src/commands/batch/: mod.rs
apps/cli/src/commands/chat/: action.rs  app.rs  effect.rs  mod.rs  runtime.rs
apps/cli/src/commands/connect/: app.rs  mod.rs  providers.rs  ui.rs
apps/cli/src/commands/debug/transcribe/: action.rs  app.rs  audio.rs  mod.rs  runtime.rs  tracing.rs
apps/cli/src/commands/debug/transcribe/ui/: mod.rs  shell.rs
apps/cli/src/commands/entry/: app.rs  effect.rs  mod.rs
apps/cli/src/commands/entry/ui/: command_input.rs  command_popup.rs  mod.rs
apps/cli/src/commands/listen/: mod.rs
apps/cli/src/commands/model/: list.rs
apps/cli/src/config/: stt.rs
apps/cli/src/runtime/: db.rs  mod.rs
apps/cli/src/widgets/: mod.rs
apps/desktop/: package.json
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/src/: commands.rs  lib.rs
apps/desktop/src/chat/components/: header.tsx
apps/desktop/src/chat/components/body/: empty.tsx
apps/desktop/src/onboarding/account/: before-login.tsx
apps/desktop/src/services/: event-listeners.tsx
apps/desktop/src/session/components/: listen-action.tsx
apps/desktop/src/session/components/floating/: listen.tsx
apps/desktop/src/session/components/note-input/: header.tsx
apps/desktop/src/session/components/note-input/transcript/: export-data.ts
apps/desktop/src/session/components/outer-header/overflow/: export-transcript.tsx
apps/desktop/src/settings/general/: storage.tsx
apps/desktop/src/shared/main/: index.tsx
apps/desktop/src/sidebar/: index.tsx  search-input.tsx
apps/desktop/src/sidebar/search/: index.tsx  use-search-keyboard.ts
apps/desktop/src/store/zustand/listener/: instance.ts
apps/desktop/src/store/zustand/tabs/: index.ts
apps/web/content/articles/: ai-meeting-summary-tools.mdx
apps/web/content/changelog/: 1.0.12.mdx
apps/web/content/docs/developers/: 1.env.mdx  16.local-models.mdx
apps/web/content/docs/faq/: 1.features.mdx  10.ai-models-and-privacy.mdx  7.settings.mdx
apps/web/content/docs/getting-started/: 0.installation.mdx
apps/web/content/docs/guides/: 0.data.mdx
apps/web/content/legal/: cookies.mdx  privacy.mdx
apps/web/content/updates/: 2026-02-01.mdx  2026-02-08.mdx  2026-02-15.mdx  2026-02-22.mdx  2026-03-01.mdx  2026-03-08.mdx  2026-03-15.mdx
apps/web/src/: router.tsx
apps/web/src/components/: footer.tsx  privacy-consent.tsx
apps/web/src/components/admin/: media-selector-modal.tsx
apps/web/src/functions/: media-upload.ts  supabase-media.ts
apps/web/src/hooks/: use-media-api.tsx
apps/web/src/lib/: media.ts
apps/web/src/providers/: posthog.tsx
apps/web/src/routes/: __root.tsx  founders.tsx
apps/web/src/routes/_view/app/: -account-access.tsx  account.tsx
apps/web/src/routes/_view/company-handbook/: $.tsx
apps/web/src/routes/_view/docs/: $.tsx
apps/web/src/routes/admin/: README.md
apps/web/src/routes/admin/collections/: index.tsx
apps/web/src/routes/api/admin/blog/: upload-image.ts
apps/web/src/routes/api/admin/content/: publish.ts  save.ts
apps/web/src/routes/api/admin/import/: google-docs.ts
apps/web/src/routes/api/admin/media/: upload.ts
crates/audio/src/speaker/: macos.rs
crates/cactus/: Cargo.toml
crates/cactus/src/: lib.rs
crates/cactus/src/stt/: mod.rs  transcriber.rs
crates/cactus/tests/: stt.rs
crates/db3/src/: lib.rs
crates/fs-sync-core/: Cargo.toml
crates/fs-sync-core/src/: audio.rs  cleanup.rs  error.rs  folder.rs  frontmatter.rs  json.rs  lib.rs  path.rs  scan.rs  session.rs  session_content.rs  test_fixtures.rs  types.rs
crates/local-model/src/: lib.rs
crates/storage/src/vault/: fs.rs
crates/transcribe-cactus/: Cargo.toml
crates/transcribe-cactus/examples/: live.rs
crates/transcribe-cactus/src/service/streaming/: debug.rs  mod.rs  session.rs
crates/transcribe-cli/: Cargo.toml  README.md
crates/transcribe-cli/examples/: cactus.rs  deepgram.rs  hyprnote.rs  soniox.rs
crates/transcribe-cli/src/: lib.rs
plugins/fs-sync/: Cargo.toml
plugins/fs-sync/src/: ext.rs  lib.rs
plugins/store2/: Cargo.toml
plugins/store2/src/: error.rs  ext.rs  lib.rs
plugins/tantivy/src/: ext.rs
plugins/tray/src/menu_items/: tray_start.rs
