[package]
name = "cactus"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
cactus-sys = { git = "https://github.com/cactus-compute/cactus", package = "cactus-sys", rev = "a5acad3" }

hypr-language = { workspace = true }
hypr-llm-types = { workspace = true }

futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hypr-data = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "vad"
harness = false
