[package]
name = "transcribe-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-audio = { workspace = true }
hypr-audio-utils = { workspace = true }
hypr-language = { workspace = true }
owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }

axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
colored = "3"
futures-util = { workspace = true }
tokio = { workspace = true }

clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }

[dev-dependencies]
hypr-api-env = { workspace = true }
hypr-transcribe-cactus = { workspace = true }
hypr-transcribe-proxy = { workspace = true }
